docs/7.52/md/abenabap_json_to_html_abexa.md
---
title: "JSON, Transformation to HTML"
description: |
  Transformation from JSON data to HTML. Source Code REPORT demo_json_2_html. CLASS demo DEFINITION. PUBLIC SECTION. CLASS-METHODS main. ENDCLASS. CLASS demo IMPLEMENTATION. METHOD main. SELECT  FROM scarr INTO TABLE @DATA(result) UP TO 3 ROWS. DATA(json_writer) = cl_sxml_string_writer=>creat
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_to_html_abexa.htm"
abapFile: "abenabap_json_to_html_abexa.htm"
keywords: ["select", "do", "if", "method", "class", "data", "abenabap", "json", "html", "abexa"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and JSON](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json.htm) →  [JSON, Examples](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_abexas.htm) → 

JSON, Transformation to HTML

Transformation from JSON data to HTML.

Source Code

REPORT demo\_json\_2\_html.
CLASS demo DEFINITION.
  PUBLIC SECTION.
    CLASS-METHODS main.
ENDCLASS.
CLASS demo IMPLEMENTATION.
  METHOD main.
    SELECT \*
           FROM scarr
           INTO TABLE @DATA(result)
           UP TO 3 ROWS.
    DATA(json\_writer) = cl\_sxml\_string\_writer=>create(
                          type = if\_sxml=>co\_xt\_json ).
    CALL TRANSFORMATION id SOURCE result = result
                           RESULT XML json\_writer.
    DATA(json) = json\_writer->get\_output( ).
    CALL TRANSFORMATION sjson2html SOURCE XML json
                                   RESULT XML DATA(html).
    cl\_demo\_output=>display\_html(
      cl\_abap\_codepage=>convert\_from( html ) ).  ENDMETHOD.
ENDCLASS.
START-OF-SELECTION.
  demo=>main( ).

Description

This example demonstrates how [JSON data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenjson_oview.htm) is transformed to SJSON2HTML to HTML using the transformation XSL. The nodes for objects and arrays can be opened and closed in the displayed result.